--- a/views/empSignup.jade
+++ b/views/empSignup.jade
@@ -4,7 +4,7 @@ block content
 
   main
         
-      form(action="signup" method="POST" class="userForm")
+      form(action="empSignup" method="POST" class="userForm")
         input(type="text" name="emailInput" placeholder="Email")
         input(type="password" name="passwordInput" placeholder="Password")
         
