--- a/views/layout.jade
+++ b/views/layout.jade
@@ -9,11 +9,12 @@ html(ng-app="dillards")
     h1 Dillards
     nav
       a(href="/home" name="homeNav") Home
-      a(href="/about" name="aboutNav") About
+      a(href="/locations" name="aboutNav") Locations
       a(href="/signup" name="signupNav") Sign-up
       a(href="/signin" name="signupNav") Sign-in
       a(href="/userList" name="signupNav") User List
       a(href="/employeeList" name="signupNav") Employee List
+      a(href="/newStore" name="signupNav") Reqister Store
 
 
   body( ng-app="appController" )
