--- a/views/empSignup.jade
+++ b/views/empSignup.jade
@@ -12,5 +12,12 @@ block content
         
         input(type="text" name="fNameInput" placeholder="First Name")
         input(type="text" name="lNameInput" placeholder="Last Name")
+        input(type="file" name="imageInput")
+        
+        br
+        
+        input(type="number" name="lidInput" placeholder="Store Id #")
+        input(type="text" name="didInput" placeholder="Department")
+
 
         input(type="submit" class="submitUserInput" name="submitUserInput" value="Sign-up" )
