Add db's, connections, routes

--- a/views/empSignup.jade
+++ b/views/empSignup.jade
@@ -17,7 +17,31 @@ block content
         br
         
         input(type="number" name="lidInput" placeholder="Store Id #")
-        input(type="text" name="didInput" placeholder="Department")
-
-
+        
+        select(name="didInput")
+          option Watches 
+          option Handbags 
+          option Jewelry 
+          
+          option Elizabeth Arden 
+          option Clinique 
+          option Este Lauder 
+          option Lancôme 
+          option Fragrance 
+          
+          option Suits 
+          option Men's Shoes 
+          option Urbanwear 
+          option Accessories 
+          option Big and Tall
+           
+          option Dresses 
+          option Ready Wear
+          option Women's Shoes 
+          option Bedding 
+          option China 
+          option Boys 
+          option Girls 
+          option Infants 
+ 
         input(type="submit" class="submitUserInput" name="submitUserInput" value="Sign-up" )
