--- a/views/locations.jade
+++ b/views/locations.jade
@@ -16,18 +16,25 @@ block content
             //-   //- button.btn.btn-danger.btn-sm.remove(type="button")
             //-   //-   span.glyphicon.glyphicon-remove(title="Remove")
             //- td.action
-            div(class="searchInfo")
+            div.searchInfo
             
-              img(src="/images/dillard_store.jpg")
-              
               div#addressInfo
-              
-                h3= locationData[key].city + ", " + locationData[key].state
-                p= locationData[key].address + " (" + locationData[key].zip + ")"
+                div
+                  img(src="/images/dillard_store.jpg")
+                div
+                  h3= locationData[key].city + ", " + locationData[key].state
+                  p= locationData[key].address + " (" + locationData[key].zip + ")"
                 
-              div.searchResult
+                  ul#searchResult
+                  
+                    li
+                      form(action="comments", method="POST")
+                        input(type="number", name="id", value="#{commentLength}", style="display:none;")
+                        input(type="submit", href="submit", value="Comments #{commentLength}")
+                    li
+                      a(href="rating")= "Rating"
                 
-                
+              p(id="thisId" name="thisId")= "id: " + locationData[key].id
 
 
               
