--- a/views/userList.jade
+++ b/views/userList.jade
@@ -26,6 +26,7 @@ block content
                 if(userData[key].firstname)
                   p= userData[key].firstname
                   p= "Store Id: " + userData[key].lid
+                  p= "Department: " + userData[key].did
               //- div(class="toolPane")
               //-   a(href="/editBook/"+title) Edit
               //-   a(href="/deleteBook", value="Delete", name="delete", id="delete") Delete
