--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -7,11 +7,12 @@ header {
   width: 101%;
   margin-left: -7px;
   margin-top: -7px;
+  height: 60px;
 }
 
 header h1 {
   margin-left: -100px;
-  font-size: 30px;
+  font-size: 50px;
 }
 
 header nav {
@@ -28,6 +29,7 @@ main {
   display: flex;
   /*background-color: green;*/
   justify-content: center;
+  font-family: sans-serif;
 }
 
 .userForm {
@@ -58,20 +60,29 @@ main {
 
 #locationsContainer {
   width: 60%;
+  /*margin-bottom: -20px;*/
+}
+
+#locationsContainer h1 {
+  border-bottom: 1px solid black;
+  margin-bottom: 0px;
+
 }
 
 #locationsContainer .searchInfo {
   height: 100px;
-  margin-top: 10px;
+  /*margin-top: 10px;*/
   /*border: 1px solid black;*/
 }
 
 .searchInfo {
   display: flex;
-  height: 100px;
+  /*height: 120px;*/
+  padding: 10px;
+  /*flex-direction: row;*/
   /*background-color: lightblue;*/
-  border: 1px solid black;
-  margin-top: 10px;
+  border-bottom: 1px solid black;
+  margin-top: 0px;
 }
 
 .searchInfo img {
@@ -80,14 +91,21 @@ main {
 }
 
 #searchResult p {
+  height:10px;
   margin-top: 0px;
+  margin-left: 10px;
+}
 
+#searchResult li {
+  list-style: none;
 }
 
 #addressInfo {
   margin-top: -20px;
-  padding-left: 10px;
-  padding-top: 5px;
+  width: 80%;
+  /*padding-left: 10px;*/
+  /*padding-top: 5px;*/
+  display: flex;
   /*display: flex;*/
   /*background-color: blue;*/
 
@@ -96,9 +114,21 @@ main {
 #addressInfo img {
   height: 100px;
   width: 100px;
+  margin-top: 20px;
 }
 
+#addressInfo p,h3 {
+  margin-left: 10px;
+}
 #addressInfo p {
   margin-top: -20px;
+}
 
+#thisId {
+  width: 20%;
+  height: 20px;
+  margin-top: 1px;
+  margin-right: 5px;
+  text-align: right;
+  /*margin-left: 200px;*/
 }
