--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,17 +3,17 @@ html(ng-app="dillards")
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
-    script(defer src='//ajax.googleapis.com/ajax/libs/angularjs/1.2.6/angular.min.js')
+    script(defer src='https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js')
     
   header
     h1 Dillards
     nav
       a(href="/home" name="homeNav") Home
-      a(href="/locations" name="aboutNav") Locations
       a(href="/signup" name="signupNav") Sign-up
       a(href="/signin" name="signupNav") Sign-in
       a(href="/userList" name="signupNav") User List
       a(href="/employeeList" name="signupNav") Employee List
+      a(href="/locations" name="aboutNav") Locations
       a(href="/newStore" name="signupNav") Reqister Store
 
 
