--- a/views/empSignup.jade
+++ b/views/empSignup.jade
@@ -12,7 +12,7 @@ block content
         
         input(type="text" name="fNameInput" placeholder="First Name")
         input(type="text" name="lNameInput" placeholder="Last Name")
-        input(type="file" name="imageInput")
+        input(type="file" name="imgInput")
         
         br
         
