--- a/views/signup.jade
+++ b/views/signup.jade
@@ -7,6 +7,8 @@ block content
       form(action="signup" method="POST" class="userForm")
         input(type="text" name="emailInput" placeholder="Email")
         input(type="password" name="passwordInput" placeholder="Password")
+        input(type="text" name="locationInput" placeholder="State")
+
 
         input(type="submit" class="submitUserInput" name="submitUserInput" value="Sign-Up" )
         
