--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,18 +3,34 @@ html(ng-app="dillards")
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
+    script(defer src="https://code.jquery.com/jquery-3.0.0.min.js"   integrity="sha256-JmvOoLtYsmqlsWxa7mDSLMwa6dZ9rrIdtrrVYRnDRH0="   crossorigin="anonymous")
     script(defer src='https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js')
     
   header
     h1 Dillards
     nav
+    
       a(href="/home" name="homeNav") Home
-      a(href="/signup" name="signupNav") Sign-up
+      //- a(href="/signup" name="signupNav") Sign-up
       a(href="/signin" name="signupNav") Sign-in
-      a(href="/userList" name="signupNav") User List
-      a(href="/employeeList" name="signupNav") Employee List
+      
+      //- select
+      //-   option 
+      //-     a(href="/userList" class="marioPunchBowl") Users
+      //-   option
+      //-     a(href="/employeeList" class="marioPunchBowl") Employees
+      //-   option
+      //-     a(href="/locations" class="marioPunchBowl") Locations
+      //-   option
+      //-     a(href="/newStore" class="marioPunchBowl") New Store
+          
+      
+      a(href="/userList" class="marioPunchBowl") Users
+      a(href="/employeeList" class="marioPunchBowl") Employees
       a(href="/locations" name="aboutNav") Locations
-      a(href="/newStore" name="signupNav") Reqister Store
+      a(href="/newStore" name="signupNav") New Store
+
+    script(type="text/javascript", src="routes/index.js") 
 
 
   body( ng-app="appController" )
