Shows comments, Can change location and department

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,7 +4,8 @@ html(ng-app="dillards")
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
     script(defer src="https://code.jquery.com/jquery-3.0.0.min.js"   integrity="sha256-JmvOoLtYsmqlsWxa7mDSLMwa6dZ9rrIdtrrVYRnDRH0="   crossorigin="anonymous")
-    script(defer src='https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js')
+    script(src='//ajax.googleapis.com/ajax/libs/angularjs/1.2.6/angular.min.js')
+    script(src='routes/index.js')
     
   header
     h1 Dillards
