--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,13 +1,21 @@
 header {
+  /*position: fixed;*/
   display: flex;
   justify-content: space-around;
-  background: darkBlue;
+  background: #0D47A1;
   align-items: center;
   color: white;
   width: 101%;
   margin-left: -7px;
-  margin-top: -7px;
+  margin-top: -8px;
   height: 60px;
+}
+
+body {
+  background-color: #BBDEFB;
+  display: flex;
+  /*justify-content: center;*/
+  flex-direction: column;
 }
 
 header h1 {
@@ -29,7 +37,10 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
-  /*background-color: green;*/
+  align-self: center;
+  width: 600px;
+  /*height: 90vh;*/
+  background-color: white;
   justify-content: center;
   font-family: sans-serif;
 }
@@ -167,10 +178,67 @@ main .div {
   margin-bottom: -10px;
 }
 
+.storeInfo img {
+  width: 600px;
+  height: 400px;
+}
+
 .departmentNav {
   display: flex;
   /*background-color: blue;*/
   justify-content: space-around;
-  /*padding-left: 10px;*/
-  width: 200px;
+  padding: 10px;
+  width: 400px;
+  border-top: 1px solid black;
+  border-bottom: 1px solid black;
 }
+
+.commentContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.commentHeader {
+  border-bottom: 1px solid black;
+  /*height: 30px;*/
+  width: 400px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+
+
+#commentInfo {
+  width: 400px;
+  border-bottom: 1px solid black;
+}
+
+#commentResult {
+  width: 380px;
+  border-bottom: 1px solid black;
+  /*font-size: 10px;*/
+  align-self: center;
+}
+#commentResult h5 {
+  margin-top: 0px;
+  margin-bottom: -25px;
+}
+
+
+/*.comment {
+  border-bottom: 1px solid black;
+}
+
+.commentInfoHeader {
+  display:flex;
+  flex-direction: column;
+  border-bottom: 1px solid black;
+  height: 40px;
+  width: 380px;
+}*/
+
+/*.commentCell {
+  border: 1px solid black;
+}*/
