--- a/views/storeHomePage.jade
+++ b/views/storeHomePage.jade
@@ -4,6 +4,7 @@ block content
   
   main
     
+    
     div.storeInfo
     
       img(src="/images/dillard_store.jpg")
@@ -20,4 +21,30 @@ block content
       
           a(href="/store/:#{storeData.id}/department/:#{department}")= department
 
-  script(type="text/javascript", src="routes/index.js") 
+    div.commentContainer
+      
+      div(ng-controller="updateCommentsController").commentHeader
+        form(action="/newComment/:#{storeData.id}", method="POST")
+          
+          input(type="text", name="comment", placeholder="Comment")
+          input(type="submit")
+          
+      table.table.table-stripped
+        tbody  
+        
+          each comment, key in comments
+        
+            div(id="commentInfo")
+              
+              //- img(src="/images/employee_image_placeholder.png")
+
+              div#commentResult
+                //- form(action="/editBook", method="post", id="newBookForm", class="libraryInfo")
+                h5= comments[key].owner
+                h6= comments[key].post_date
+              
+                p= comments[key].comment
+          
+        
+        
+    script(type="text/javascript", src="routes/index.js") 
